SkyXplore - Faster game loading over WebSocket (#73)
Co-authored-by: bondabear@gmail.com <Saphy371321>